--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "lint:fix": "eslint --fix --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "cross-env NODE_ENV=production node ./server.js",
+    "start:dbServer": "./dbserver_start.sh",
     "typecheck": "tsc"
   },
   "eslintIgnore": [
@@ -23,6 +24,7 @@
     "@conform-to/react": "^0.8.0",
     "@conform-to/zod": "^0.8.0",
     "@prisma/client": "^5.2.0",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
