--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "/public/build"
   ],
   "dependencies": {
-    "@conform-to/react": "^0.8.0",
-    "@conform-to/zod": "^0.8.0",
+    "@conform-to/react": "^0.8.1",
+    "@conform-to/zod": "^0.8.1",
     "@prisma/client": "^5.2.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-label": "^2.0.2",
@@ -46,9 +46,11 @@
     "remix-auth": "^3.5.1",
     "remix-auth-form": "^1.3.0",
     "remix-flat-routes": "^0.5.10",
+    "satori": "^0.10.4",
     "source-map-support": "^0.5.21",
+    "svg2img": "^1.0.0-beta.2",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.6",
+    "tailwindcss-animate": "^1.0.7",
     "tiny-invariant": "^1.3.1",
     "zod": "^3.22.2"
   },
@@ -56,8 +58,8 @@
     "@remix-run/dev": "^1.19.3",
     "@remix-run/eslint-config": "^1.19.3",
     "@sly-cli/sly": "^1.4.10",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/compression": "^1.7.2",
+    "@types/bcryptjs": "^2.4.3",
+    "@types/compression": "^1.7.3",
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.5",
     "@types/react": "^18.2.21",
@@ -65,17 +67,17 @@
     "@types/source-map-support": "^0.5.7",
     "autoprefixer": "^10.4.15",
     "chokidar": "^3.5.3",
-    "eslint": "^8.47.0",
+    "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-perfectionist": "^1.5.1",
-    "glob": "^10.3.3",
+    "eslint-plugin-perfectionist": "^2.0.0",
+    "glob": "^10.3.4",
     "node-html-parser": "^6.1.6",
-    "prettier": "^3.0.2",
-    "prettier-plugin-tailwindcss": "^0.5.3",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
     "prisma": "^5.2.0",
     "tailwindcss": "^3.3.3",
-    "tsx": "^3.12.7",
-    "typescript": "^5.1.6"
+    "tsx": "^3.12.8",
+    "typescript": "^5.2.2"
   },
   "engines": {
     "node": ">=18.0.0"
