--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@remix-run/node": "^1.19.3",
     "@remix-run/react": "^1.19.3",
     "bcryptjs": "^2.4.3",
+    "cachified": "^3.5.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "compression": "^1.7.4",
@@ -40,6 +41,7 @@
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "isbot": "^3.6.13",
+    "lru-cache": "^10.0.1",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
