--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "build": "remix build",
     "build:icons": "tsx build-icons.ts",
     "dev": "remix dev --manual -c \"node server.js\"",
+    "dev:dbServer": "./dbserver_start.sh",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "lint:fix": "eslint --fix --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "cross-env NODE_ENV=production node ./server.js",
-    "start:dbServer": "./dbserver_start.sh",
     "typecheck": "tsc"
   },
   "eslintIgnore": [
@@ -23,15 +23,15 @@
   "dependencies": {
     "@conform-to/react": "^0.9.0",
     "@conform-to/zod": "^0.9.0",
-    "@prisma/client": "^5.3.0",
+    "@prisma/client": "^5.3.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
-    "@remix-run/css-bundle": "^1.19.3",
-    "@remix-run/express": "^1.19.3",
-    "@remix-run/node": "^1.19.3",
-    "@remix-run/react": "^1.19.3",
+    "@remix-run/css-bundle": "2.0.0",
+    "@remix-run/express": "2.0.0",
+    "@remix-run/node": "2.0.0",
+    "@remix-run/react": "2.0.0",
     "bcryptjs": "^2.4.3",
     "cachified": "^3.5.4",
     "class-variance-authority": "^0.7.0",
@@ -40,15 +40,15 @@
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
-    "isbot": "^3.6.13",
+    "isbot": "^3.7.0",
     "lru-cache": "^10.0.1",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-auth": "^3.5.1",
     "remix-auth-form": "^1.3.0",
-    "remix-flat-routes": "^0.5.10",
-    "satori": "^0.10.4",
+    "remix-flat-routes": "^0.5.11",
+    "satori": "^0.10.7",
     "source-map-support": "^0.5.21",
     "svg2img": "^1.0.0-beta.2",
     "tailwind-merge": "^1.14.0",
@@ -57,26 +57,26 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.19.3",
-    "@remix-run/eslint-config": "^1.19.3",
+    "@remix-run/dev": "^2.0.0",
+    "@remix-run/eslint-config": "^2.0.0",
     "@sly-cli/sly": "^1.4.10",
-    "@types/bcryptjs": "^2.4.3",
+    "@types/bcryptjs": "^2.4.4",
     "@types/compression": "^1.7.3",
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.5",
-    "@types/react": "^18.2.21",
+    "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "@types/source-map-support": "^0.5.7",
-    "autoprefixer": "^10.4.15",
+    "autoprefixer": "^10.4.16",
     "chokidar": "^3.5.3",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-perfectionist": "^2.1.0",
-    "glob": "^10.3.4",
-    "node-html-parser": "^6.1.9",
+    "glob": "^10.3.5",
+    "node-html-parser": "^6.1.10",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
-    "prisma": "^5.3.0",
+    "prisma": "^5.3.1",
     "tailwindcss": "^3.3.3",
     "tsx": "^3.12.10",
     "typescript": "^5.2.2"
@@ -86,5 +86,14 @@
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
+  },
+  "overrides": {
+    "remix-auth": {
+      "@remix-run/react": "^2.0.0",
+      "@remix-run/server-runtime": "^2.0.0"
+    },
+    "remix-auth-form": {
+      "@remix-run/server-runtime": "^2.0.0"
+    }
   }
 }
