--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "remix-auth": "^3.6.0",
     "remix-auth-form": "^1.4.0",
     "remix-flat-routes": "^0.5.12",
+    "remix-params-helper": "^0.4.10",
     "satori": "^0.10.9",
     "source-map-support": "^0.5.21",
     "svg2img": "^1.0.0-beta.2",
