--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
   "dependencies": {
     "@conform-to/react": "^0.9.0",
     "@conform-to/zod": "^0.9.0",
-    "@prisma/client": "^5.3.1",
+    "@prisma/client": "^5.4.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-toast": "^1.1.4",
-    "@remix-run/css-bundle": "2.0.0",
-    "@remix-run/express": "2.0.0",
-    "@remix-run/node": "2.0.0",
-    "@remix-run/react": "2.0.0",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@remix-run/css-bundle": "2.1.0",
+    "@remix-run/express": "2.1.0",
+    "@remix-run/node": "2.1.0",
+    "@remix-run/react": "2.1.0",
     "bcryptjs": "^2.4.3",
     "cachified": "^3.5.4",
     "class-variance-authority": "^0.7.0",
@@ -45,40 +45,40 @@
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "remix-auth": "^3.5.1",
-    "remix-auth-form": "^1.3.0",
-    "remix-flat-routes": "^0.5.11",
-    "satori": "^0.10.7",
+    "remix-auth": "^3.6.0",
+    "remix-auth-form": "^1.4.0",
+    "remix-flat-routes": "^0.6.1",
+    "satori": "^0.10.9",
     "source-map-support": "^0.5.21",
     "svg2img": "^1.0.0-beta.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "tiny-invariant": "^1.3.1",
-    "zod": "^3.22.2"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.0.0",
-    "@remix-run/eslint-config": "^2.0.0",
+    "@remix-run/dev": "2.1.0",
+    "@remix-run/eslint-config": "2.1.0",
     "@sly-cli/sly": "^1.4.10",
-    "@types/bcryptjs": "^2.4.4",
-    "@types/compression": "^1.7.3",
-    "@types/express": "^4.17.17",
-    "@types/morgan": "^1.9.5",
-    "@types/react": "^18.2.22",
-    "@types/react-dom": "^18.2.7",
-    "@types/source-map-support": "^0.5.7",
+    "@types/bcryptjs": "^2.4.5",
+    "@types/compression": "^1.7.4",
+    "@types/express": "^4.17.20",
+    "@types/morgan": "^1.9.7",
+    "@types/react": "^18.2.31",
+    "@types/react-dom": "^18.2.14",
+    "@types/source-map-support": "^0.5.9",
     "autoprefixer": "^10.4.16",
     "chokidar": "^3.5.3",
-    "eslint": "^8.49.0",
+    "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-perfectionist": "^2.1.0",
-    "glob": "^10.3.5",
+    "eslint-plugin-perfectionist": "^2.2.0",
+    "glob": "^10.3.10",
     "node-html-parser": "^6.1.10",
     "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.4",
-    "prisma": "^5.3.1",
+    "prettier-plugin-tailwindcss": "^0.5.6",
+    "prisma": "^5.4.2",
     "tailwindcss": "^3.3.3",
-    "tsx": "^3.12.10",
+    "tsx": "^3.14.0",
     "typescript": "^5.2.2"
   },
   "engines": {
